feat: add header

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,8 @@
     <title>Blockchain</title>
 </head>
 <body>
-    
 
-    <h1>Init</h1>
+    @@include('_header.html')
 
     <script src="js/script.min.js"></script>
     
