--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
 
     @@include('_header.html')
 
+    <main class="main">
+
+        @@include('_home.html')
+
+    </main>
+
     <script src="js/script.min.js"></script>
     
 </body>
