feat: update achievements section

--- a/src/_achievements.html
+++ b/src/_achievements.html
@@ -27,4 +27,22 @@
 
     </div>
 
+    <div class="partners">
+        <svg height="34" width="150" aria-hidden="true" role="img">
+            <use xlink:href="#coinbase"></use>
+        </svg>
+
+        <svg height="25" width="310" aria-hidden="true" role="img">
+            <use xlink:href="#blockchain"></use>
+        </svg>
+
+        <svg height="42" width="205" aria-hidden="true" role="img">
+            <use xlink:href="#binance"></use>
+        </svg>
+
+        <svg height="29" width="179" aria-hidden="true" role="img">
+            <use xlink:href="#bitmex"></use>
+        </svg>
+    </div>
+
 </section>
