--- a/src/_header.html
+++ b/src/_header.html
@@ -12,7 +12,7 @@
                     <a class="nav__item" href="javascript:void(0);">Community</a>
                 </nav>
 
-                <button class="button">Join for Free</button>
+                <button class="button button_filled">Join for Free</button>
             </div>
     
         </div>
